force-app/main/default/objects/LegacyFulfillment__c/LegacyFulfillment__c.object-meta.xml
<CustomObject>
    <label>Legacy Fulfillment</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Fulfillment Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>