force-app/main/default/objects/LegacyFulfillment__c/fields/ACDF_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Company__c</fullName>
    <description>This is the company field that is normalized and should be used for the index.</description>
    <formula>PrimaryRecipient__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>