force-app/main/default/objects/LegacyFulfillment__c/fields/Ad_Prod_Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ad_Prod_Alternate_Contact__c</fullName>
    <label>Ad Prod Alternate Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>