force-app/main/default/objects/LegacyFulfillment__c/fields/Ad_Prod_Alternate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ad_Prod_Alternate_Notes__c</fullName>
    <label>Ad Prod Alternate Notes</label>
    <type>TextArea</type>
</CustomField>