force-app/main/default/objects/LegacyFulfillment__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <formula>PrimaryRecipient__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 1</label>
    <type>Text</type>
</CustomField>