force-app/main/default/objects/LegacyFulfillment__c/fields/Announcement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Completed__c</fullName>
    <formula>IF ((Product_Name__c) = &quot;Social Media / Email Campaign - 12X&quot; &amp;&amp;  TEXT(Times_Announced__c) = &quot;12&quot; ||
(Product_Name__c) = &quot;Social Media / Email Campaign - 6X&quot; &amp;&amp;  TEXT(Times_Announced__c) = &quot;6&quot; ||
(Product_Name__c) = &quot;Social Media / Email Campaign - 4X&quot; &amp;&amp;  TEXT(Times_Announced__c) = &quot;4&quot; ||
(Product_Name__c) = &quot;Social Media / Email Campaign - 2X&quot; &amp;&amp;  TEXT(Times_Announced__c) = &quot;2&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Announcement Completed</label>
    <type>Checkbox</type>
</CustomField>