force-app/main/default/objects/LegacyFulfillment__c/fields/Appropriate_Template_Opened__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_Template_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect Order Checklist Field</description>
    <inlineHelpText>Has the appropriate template from the master template folder been opened?</inlineHelpText>
    <label>Appropriate Template Opened</label>
    <type>Checkbox</type>
</CustomField>