force-app/main/default/objects/LegacyFulfillment__c/fields/approved_completed__c.field-meta.xml
<CustomField>
    <fullName>approved_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>approved/completed</label>
    <type>Checkbox</type>
</CustomField>