force-app/main/default/objects/LegacyFulfillment__c/fields/Auto_Post__c.field-meta.xml
<CustomField>
    <fullName>Auto_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval to post to social media without getting individual post approvals</description>
    <inlineHelpText>Approval to post to social media without getting individual post approvals</inlineHelpText>
    <label>Auto Post</label>
    <type>Checkbox</type>
</CustomField>