force-app/main/default/objects/LegacyFulfillment__c/fields/Back_Cover_Ad_Form__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Ad_Form__c</fullName>
    <label>Back Cover Ad Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>