force-app/main/default/objects/LegacyFulfillment__c/fields/Back_Cover_Inside_Ad_Template__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Inside_Ad_Template__c</fullName>
    <label>Back Cover (Inside) Ad Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>