force-app/main/default/objects/LegacyFulfillment__c/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <formula>OrderProductLine__r.kugo2p__Product__r.kugo2p__ReferenceProduct__r.Base_Product__c</formula>
    <label>Base Product</label>
    <type>Text</type>
</CustomField>