force-app/main/default/objects/LegacyFulfillment__c/fields/Boosted__c.field-meta.xml
<CustomField>
    <fullName>Boosted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is for recording when a social post has been boosted with paid advertising.</description>
    <label>Boosted</label>
    <type>Checkbox</type>
</CustomField>