force-app/main/default/objects/LegacyFulfillment__c/fields/Build_from_Existing_Proflie__c.field-meta.xml
<CustomField>
    <fullName>Build_from_Existing_Proflie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E Reprint Checklist field</description>
    <inlineHelpText>Build the E reprint from the existing profile</inlineHelpText>
    <label>Build from Existing Proflie</label>
    <type>Checkbox</type>
</CustomField>