force-app/main/default/objects/LegacyFulfillment__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <description>The date a product is &quot;live&quot; for the client. Date of first e-newsletter is sent, date the digital ads started running, etc.</description>
    <inlineHelpText>The date a product is &quot;live&quot; for the client. Date of first e-newsletter is sent, date the digital ads started running, etc.</inlineHelpText>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>