force-app/main/default/objects/LegacyFulfillment__c/fields/CC_Editor_Template__c.field-meta.xml
<CustomField>
    <fullName>CC_Editor_Template__c</fullName>
    <label>CC Editor Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>