force-app/main/default/objects/LegacyFulfillment__c/fields/Central_Contact__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact__c</fullName>
    <formula>PrimaryRecipient__r.Central_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Central Contact</label>
    <type>Checkbox</type>
</CustomField>