force-app/main/default/objects/LegacyFulfillment__c/fields/Central_Contact_Note__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Note__c</fullName>
    <formula>PrimaryRecipient__r.Central_Contact_Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Central Contact Note</label>
    <type>Text</type>
</CustomField>