force-app/main/default/objects/LegacyFulfillment__c/fields/CFP__c.field-meta.xml
<CustomField>
    <fullName>CFP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this WM is a CFP and needs the CFP disclosure on their product</description>
    <inlineHelpText>If checked, this WM is a CFP and needs the CFP disclosure on their product</inlineHelpText>
    <label>CFP</label>
    <type>Checkbox</type>
</CustomField>