force-app/main/default/objects/LegacyFulfillment__c/fields/Change_status_to_Send_Initial_Proof__c.field-meta.xml
<CustomField>
    <fullName>Change_status_to_Send_Initial_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E reprint checklist field</description>
    <inlineHelpText>Change Status to Send Initial Proof</inlineHelpText>
    <label>Change status to Send Initial Proof</label>
    <type>Checkbox</type>
</CustomField>