force-app/main/default/objects/LegacyFulfillment__c/fields/City_of_focus__c.field-meta.xml
<CustomField>
    <fullName>City_of_focus__c</fullName>
    <formula>PrimaryRecipient__r.ACDF_City_of_Focus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City of focus</label>
    <type>Text</type>
</CustomField>