force-app/main/default/objects/LegacyFulfillment__c/fields/Client_Success_Tracker_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Tracker_URL__c</fullName>
    <description>The auto-generated CST url will appear in this field for all Client Success fulfillments associated with the same Market Project</description>
    <label>Client Success Tracker URL</label>
    <type>Url</type>
</CustomField>