force-app/main/default/objects/LegacyFulfillment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>PrimaryRecipient__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Company</label>
    <type>Text</type>
</CustomField>