force-app/main/default/objects/LegacyFulfillment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LegacyFulfillments (Contact)</relationshipLabel>
    <relationshipName>LegacyFulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>