force-app/main/default/objects/LegacyFulfillment__c/fields/Contact_Block_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Company__c</fullName>
    <label>Contact Block Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>