force-app/main/default/objects/LegacyFulfillment__c/fields/Contact_Block_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Disclosure__c</fullName>
    <label>Contact Block Disclosure</label>
    <type>TextArea</type>
</CustomField>