force-app/main/default/objects/LegacyFulfillment__c/fields/Contact_Block_Title_s__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Title_s__c</fullName>
    <label>Contact Block Title(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>