force-app/main/default/objects/LegacyFulfillment__c/fields/Create_Template_for_Correct_Market__c.field-meta.xml
<CustomField>
    <fullName>Create_Template_for_Correct_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once the section has uploaded, create template for correct market</inlineHelpText>
    <label>Create Template for Correct Market</label>
    <type>Checkbox</type>
</CustomField>