force-app/main/default/objects/LegacyFulfillment__c/fields/CSR_Follow_Up_3_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Follow_Up_3_Date__c</fullName>
    <formula>Market__r.CSR_Follow_Up_3_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Follow-Up 3 Date</label>
    <type>Date</type>
</CustomField>