force-app/main/default/objects/LegacyFulfillment__c/fields/CSR_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CSR_Phone_Number__c</fullName>
    <formula>Fulfillment_Owner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Phone Number</label>
    <type>Text</type>
</CustomField>