force-app/main/default/objects/LegacyFulfillment__c/fields/CSR_Sumo_Link__c.field-meta.xml
<CustomField>
    <fullName>CSR_Sumo_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hknrUAA&amp;ContactID=&quot;+ Customer_ID__c +&quot;&amp;PID=&quot;+  Fulfillment_Owner__r.Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Sumo Link</label>
    <type>Text</type>
</CustomField>