force-app/main/default/objects/LegacyFulfillment__c/fields/Customer_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Survey Sent</label>
    <type>Checkbox</type>
</CustomField>