force-app/main/default/objects/LegacyFulfillment__c/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <formula>TODAY()  -   True_Last_Activity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>