force-app/main/default/objects/LegacyFulfillment__c/fields/Days_Since_Sales_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Sales_End__c</fullName>
    <formula>TODAY()-Market_Sales_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Sales End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>