force-app/main/default/objects/LegacyFulfillment__c/fields/Display_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Contact_First_Name__c</fullName>
    <description>This field shows Contact Display Name when populated. If Contact Display Name field is not populated, this field will show the Contact Name (First, Middle, Last)</description>
    <formula>BLANKVALUE(PrimaryRecipient__r.Display_First_Name__c, PrimaryRecipient__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows Contact Display Name when populated. If Contact Display Name field is not populated, this field will show the Contact Name (First, Middle, Last)</inlineHelpText>
    <label>Display/Contact First Name</label>
    <type>Text</type>
</CustomField>