force-app/main/default/objects/LegacyFulfillment__c/fields/Display_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Contact_Full_Name__c</fullName>
    <description>Display/Contact Full Name</description>
    <formula>Display_Contact_First_Name__c + &quot; &quot; + Display_Contact_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display/Contact Full Name</inlineHelpText>
    <label>Display/Contact Full Name</label>
    <type>Text</type>
</CustomField>