force-app/main/default/objects/LegacyFulfillment__c/fields/Display_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Team_Name__c</fullName>
    <formula>PrimaryRecipient__r.Display_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Team Name</label>
    <type>Text</type>
</CustomField>