force-app/main/default/objects/LegacyFulfillment__c/fields/E_Reprint_PDF_location__c.field-meta.xml
<CustomField>
    <fullName>E_Reprint_PDF_location__c</fullName>
    <inlineHelpText>Preloaded with http://fivestarprofessional.com. Enter the FTP location of the PDF (Ex. /Content/DAK/11-1-19/_PDF/JohnAKuehnle_ListingEReprints.pdf)</inlineHelpText>
    <label>E-Reprint PDF location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>