force-app/main/default/objects/LegacyFulfillment__c/fields/Emblem_Type__c.field-meta.xml
<CustomField>
    <fullName>Emblem_Type__c</fullName>
    <formula>TEXT( OrderProductLine__r.Emblem_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emblem Type</label>
    <type>Text</type>
</CustomField>