force-app/main/default/objects/LegacyFulfillment__c/fields/Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Entry_ID__c</fullName>
    <label>Entry ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>