force-app/main/default/objects/LegacyFulfillment__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <description>Date the customer can expect to receive their product.</description>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>