force-app/main/default/objects/LegacyFulfillment__c/fields/First_Shipping_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Shipping_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check along with &quot;shipping info needed&quot;, uncheck shipping info needed after saving.</inlineHelpText>
    <label>First Shipping Attempt</label>
    <type>Checkbox</type>
</CustomField>