force-app/main/default/objects/LegacyFulfillment__c/fields/FName__c.field-meta.xml
<CustomField>
    <fullName>FName__c</fullName>
    <formula>PrimaryRecipient__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FName</label>
    <type>Text</type>
</CustomField>