force-app/main/default/objects/LegacyFulfillment__c/fields/Fortune_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Issue_Date__c</fullName>
    <formula>Market__r.Fortune_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fortune Issue Date</label>
    <type>Text</type>
</CustomField>