force-app/main/default/objects/LegacyFulfillment__c/fields/Fulfillment_Owner_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_Fullname__c</fullName>
    <formula>(Fulfillment_Owner__r.FirstName + &quot; &quot; + Fulfillment_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner Fullname</label>
    <type>Text</type>
</CustomField>