force-app/main/default/objects/LegacyFulfillment__c/fields/Fulfillment_Proof_Delivery_Date_RE_MP_H__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Proof_Delivery_Date_RE_MP_H__c</fullName>
    <formula>Market__r.Fullfillment_Proof_Delivery_Date_REMPHA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Proof Delivery Date (RE-MP-H</label>
    <type>Date</type>
</CustomField>