force-app/main/default/objects/LegacyFulfillment__c/fields/Fulfillment_Proof_Delivery_Date_WM_IP__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Proof_Delivery_Date_WM_IP__c</fullName>
    <formula>Market__r.Fulfillment_Proof_Delivery_Date_WM_IP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Proof Delivery Date (WM-IP)</label>
    <type>Date</type>
</CustomField>