force-app/main/default/objects/LegacyFulfillment__c/fields/Full_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Order_ID__c</fullName>
    <formula>OrderNumber__r.Full_Order_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Order ID</label>
    <type>Text</type>
</CustomField>