force-app/main/default/objects/LegacyFulfillment__c/fields/Goal_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Shipped_Date__c</fullName>
    <description>Based on Date Packaged, used for analtics</description>
    <formula>Ready_to_Ship_Date__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on date ready to ship</inlineHelpText>
    <label>Goal Shipped Date</label>
    <type>Date</type>
</CustomField>