force-app/main/default/objects/LegacyFulfillment__c/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <description>This field is used to report # of digital ad campaign impressions.</description>
    <label>Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>