force-app/main/default/objects/LegacyFulfillment__c/fields/Index_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull_Date__c</fullName>
    <formula>Market__r.Index_Pull_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Pull Date</label>
    <type>Date</type>
</CustomField>