force-app/main/default/objects/LegacyFulfillment__c/fields/Inscription_Info_Needed__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Info_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to set the fulfillment status to &quot;inscription info needed&quot; and email the AM who created the order</inlineHelpText>
    <label>Inscription Info Needed</label>
    <type>Checkbox</type>
</CustomField>