force-app/main/default/objects/LegacyFulfillment__c/fields/Inscription_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_2__c</fullName>
    <formula>OrderProductLine__r.Inscription_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inscription Line 2 RETIRED</label>
    <type>Text</type>
</CustomField>