force-app/main/default/objects/LegacyFulfillment__c/fields/Intial_Proof_Sent_Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>Intial_Proof_Sent_Awaiting_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect order checklist field</description>
    <inlineHelpText>Has the proof been sent to the client?</inlineHelpText>
    <label>Initial Proof Sent - Awaiting Approval</label>
    <type>Checkbox</type>
</CustomField>