force-app/main/default/objects/LegacyFulfillment__c/fields/Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact__c</fullName>
    <label>Last Contact</label>
    <type>DateTime</type>
</CustomField>