force-app/main/default/objects/LegacyFulfillment__c/fields/Last_Proof_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Proof_Sent__c</fullName>
    <description>Date last proof was sent, Auto-checked by send proof handler,</description>
    <inlineHelpText>date last proof was automatically sent</inlineHelpText>
    <label>Last Proof Sent</label>
    <type>Date</type>
</CustomField>