force-app/main/default/objects/LegacyFulfillment__c/fields/Line_2__c.field-meta.xml
<CustomField>
    <fullName>Line_2__c</fullName>
    <description>New field to capture line 2 of wall plaque and desk award inscriptions from SGIZMO.</description>
    <label>Line 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>