force-app/main/default/objects/LegacyFulfillment__c/fields/Line_3__c.field-meta.xml
<CustomField>
    <fullName>Line_3__c</fullName>
    <description>New field to capture line 3 of wall plaque and desk award inscriptions from SGIZMO.</description>
    <label>Line 3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>