force-app/main/default/objects/LegacyFulfillment__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <formula>OrderProductLine__r.kugo2p__LineDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>