force-app/main/default/objects/LegacyFulfillment__c/fields/LName__c.field-meta.xml
<CustomField>
    <fullName>LName__c</fullName>
    <formula>PrimaryRecipient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LName</label>
    <type>Text</type>
</CustomField>