force-app/main/default/objects/LegacyFulfillment__c/fields/Made_Revisions__c.field-meta.xml
<CustomField>
    <fullName>Made_Revisions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect Order Checklist</description>
    <inlineHelpText>As revisions were made, were they saved with a new number? P1, P2, for example?</inlineHelpText>
    <label>Made Revisions</label>
    <type>Checkbox</type>
</CustomField>