force-app/main/default/objects/LegacyFulfillment__c/fields/Managed_Social_Media_Platform__c.field-meta.xml
<CustomField>
    <fullName>Managed_Social_Media_Platform__c</fullName>
    <description>Social Media Platform for Managed Social</description>
    <inlineHelpText>Social Media Platform for Managed Social</inlineHelpText>
    <label>Managed Social Media Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>