force-app/main/default/objects/LegacyFulfillment__c/fields/Market_Sales_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Sales_End_Date__c</fullName>
    <formula>Market__r.Sales_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sales End Date</label>
    <type>Date</type>
</CustomField>