force-app/main/default/objects/LegacyFulfillment__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <formula>OrderProductLine__r.Actual_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>